hphp/hack/test/typecheck/reactive/owned_mutable1.php.exp
File "owned_mutable1.php", line 3, characters 1-17:
__OwnedMutable annotation can only be placed on parameters. (Parsing[1002])
