hphp/hack/test/typecheck/reactive/owned_mutable1.php
<?hh // partial
// ERROR
<<__OwnedMutable>>
function f(): void {
}
